fix left navigation spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body {
+html, body {
     height: 100%;
     width: 100%;
     margin: 0;
@@ -7,8 +7,9 @@ body {
     user-select: none;
     -webkit-user-select: none;
     font-family: -apple-system,BlinkMacSystemFont,sans-serif;
-    font-size: 13px;
+    font-size: 12px;
     line-height: 1.4em;
+    background-color: #252526;
 }
 
 .top-titlebar {
@@ -23,18 +24,26 @@ body {
     user-select: none;
     -webkit-user-select: none;
     zoom: 1;
-    line-height: 22px;
-    height: 22px;
+    line-height: 1.83rem;
+    height: 1.83rem;
     display: flex;
+    /* makes the titlebar draggable; does not work with DevTools open
+    https://www.electronjs.org/docs/api/frameless-window#draggable-region */
+    -webkit-app-region: drag;
+}
+
+.nav-and-content {
+    height: 100%;
 }
 
 .left-navigation {
-    width: 48px;
+    width: 4rem;
     background-color: rgb(39, 40, 34);
+    height: 100%;
+    display: block;
 }
 
 .left-navigation .content {
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -44,8 +53,32 @@ body {
     margin-bottom: auto;
 }
 
+.left-navigation .content .composite-bar .action-label {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    overflow: hidden;
+    margin-right: 0;
+    box-sizing: border-box;
+    height: 3rem;
+}
+
+.left-navigation .content .composite-bar .action-item {
+    list-style-type: none;
+}
+
+.left-navigation .content .composite-bar .action-item .action-label:hover {
+    cursor: pointer;
+    color: rgb(248, 248, 242);
+}
+
+.left-navigation .content .composite-bar .action-label:checked {
+    color: rgb(248, 248, 242);
+}
+
 .left-navigation .content .composite-bar .action-label.codicon {
-    font-size: 24px;
+    font-size: 2rem;
+    line-height: 2rem;
     align-items: center;
     justify-content: center;
     color: rgba(248, 248, 242, 0.4);
@@ -61,6 +94,10 @@ body {
     overflow: hidden;
     width: 100%;
     height: 100%;
+}
+
+.right-content {
+    background-color: rgb(30, 31, 28);
 }
 
 .mac {
